<resources>
    <string name="app_name">PlanGenie</string>
    <string name="signup">Signup</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">LOGIN</string>
    <string name="e_mail">E-mail</string>
    <string name="password">password</string>
    <string name="new_register_a_new_account">New?Register a new account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm">Confirm</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="go_back">Go back</string>
    <string name="create_an_event">+ Create an Event</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_event">Enter Your Event</string>
    <string name="show_calendar">Show Calendar</string>
    <string name="delete">delete</string>
    <string name="complete">complete</string>
    <string name="event_handler">Event Handler</string>
</resources>