<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_handler"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/completeDialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:layout_weight="1"
            android:layout_gravity="start"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/deleteDialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_weight="1"
            android:layout_gravity="start"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cancelDialogBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_gravity="start"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>



</LinearLayout>