<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:src="@drawable/plange"/>

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/login"
        android:textColor="@color/oceanBlue"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="162dp" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="281dp"
        android:layout_height="58dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:padding="3dp"
        android:background="@drawable/border"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="281dp"
        android:layout_height="58dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:padding="3dp"/>
    <TextView
        android:id="@+id/loginForgotPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="100dp"
        android:paddingLeft="90dp"
        android:text="@string/forgot_password"/>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="281dp"
        android:layout_height="58dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/loginSignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="12dp"
        android:text="@string/new_register_a_new_account"/>

</LinearLayout>