<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="62dp"
        android:text="@string/reset_your_password"
        android:textColor="@color/oceanBlue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/forgotPpFullName"
        android:layout_width="281dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="Enter full name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <EditText
        android:id="@+id/fPpEmail"
        android:layout_width="281dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPpFullName" />

    <Button
        android:id="@+id/fPpConfirm"
        android:layout_width="281dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fPpEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>