<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oceanBlue"
    tools:context=".DetailEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_DetailEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/skyBlue"
            app:cardUseCompatPadding="true"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="69dp">

            <EditText
                android:id="@+id/EventEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/enter_your_event" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            app:cardBackgroundColor="@color/skyBlue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/show_calendar"/>

                <CalendarView
                    android:id="@+id/calendar_view"
                    android:layout_width="match_parent"
                    android:layout_height="318dp"
                    android:visibility="visible" />

                <TimePicker
                    android:id="@+id/timePickerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:timePickerMode="spinner"
                    android:visibility="gone"
                    />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:contentPadding="16dp"
            app:cardBackgroundColor="@color/skyBlue"
            app:cardUseCompatPadding="true"
            >
            <Switch
                android:id="@+id/reminderSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reminder"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_gravity="start"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:layout_weight="1"
                android:layout_gravity="end"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>